2007-06-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpimagecommenteditor.[ch]: new widget derived from
	GimpImageParasiteView. Basically the code that used to live in
	image-properties-dialog.c.

	* app/dialogs/image-properties-dialog.c: use the comment editor.

2007-06-27  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-properties-dialog.c: allow to edit the comment.

	* app/widgets/gimpimageprofileview.c: enable line wrapping.

2007-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tile.c (tile): call gimp_drawable_update() on
	the destination drawable.

	* plug-ins/common/tiff-load.c: formatting.

2007-06-27  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimagemap.c (gimp_image_map_clear)
	(gimp_image_map_do): update the image, not the drawable so we
	avoid constantly invalidating the drawable preview.

	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_response):
	invalidate the drawable preview here.

	* app/paint/gimppaintcore.c (gimp_paint_core_paste)
	(gimp_paint_core_replace): clean up drawable offset handling code.

2007-06-27  Michael Natterer  <mitch@gimp.org>

	Removed useless image flushing which caused the image preview to
	be updated needlessly:

	* app/core/gimpimagemap.c (gimp_image_map_do): don't flush the
	image when the idle rendering is completed, emit our own "flush"
	signal instead just as for the incremental display updates.

	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_notify_preview):
	when switching off the preview don't flush the image, only flush
	projection and display.

2007-06-26  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-properties-dialog.c
	* app/widgets/gimpimageprofileview.c: added margins to text views.

2007-06-26  Michael Natterer  <mitch@gimp.org>

	Invalidate the image preview after the projection is
	completely constructed. Fixes bug #449141.

	* app/core/gimpmarshal.list: add VOID:BOOLEAN
